force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Designation_Detail__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_Detail__c</fullName>
    <label>Designation Detail</label>
    <referenceTo>ucinn_ascendv2__Designation_Detail__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments_Designation_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>