force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Designation_Unit_1_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_Unit_1_Amount_Formula__c</fullName>
    <formula>ucinn_ascendv2__Designation_Detail__r.ucinn_ascendv2__Designation_Unit_1_Amount_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designation Unit 1 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>