force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Disbursement__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to an associated Disbursement.</description>
    <inlineHelpText>Lookup to an associated Disbursement.</inlineHelpText>
    <label>Disbursement</label>
    <referenceTo>ucinn_ascendv2__Disbursement__c</referenceTo>
    <relationshipLabel>Related Payments</relationshipLabel>
    <relationshipName>Payments_Disbursement</relationshipName>
    <type>Lookup</type>
</CustomField>