force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__External_Matching_Service_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__External_Matching_Service_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Matching Service ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>