force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__File_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__File_Creation_Date__c</fullName>
    <description>Bofa-Specific Field</description>
    <label>File Creation Date</label>
    <type>Date</type>
</CustomField>