force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Fiscal_Year_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fiscal_Year_Formula__c</fullName>
    <description>Calculates the Fiscal Year for the Giving History</description>
    <formula>IF (MONTH(ucinn_ascendv2__Credit_Date__c ) &gt;= 7  &amp;&amp; MONTH(ucinn_ascendv2__Credit_Date__c ) &lt;= 12 ,YEAR(ucinn_ascendv2__Credit_Date__c )+1 , YEAR( ucinn_ascendv2__Credit_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>