force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Fiscal_Year_Text_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fiscal_Year_Text_Formula__c</fullName>
    <formula>TEXT( ucinn_ascendv2__Fiscal_Year_Formula__c)</formula>
    <label>Fiscal Year Text</label>
    <type>Text</type>
</CustomField>