force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Gift_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gift_Amount_Formula__c</fullName>
    <description>Used for Daily Contribution Report</description>
    <formula>IF(  ISPICKVAL(ucinn_ascendv2__Transaction_Type__c,&quot;Outright Gift&quot;),  ucinn_ascendv2__Payment_Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>