force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Gift_Processor__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gift_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift Processor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payments_Gift_Processor</relationshipName>
    <type>Lookup</type>
</CustomField>