force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Gift_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gift_Type_Formula__c</fullName>
    <formula>IF( ucinn_ascendv2__Opportunity__r.RecordType.Name = &apos;Gift&apos;, TEXT(ucinn_ascendv2__Opportunity__r.Type), &quot;&quot;)</formula>
    <label>Gift Type</label>
    <type>Text</type>
</CustomField>