force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Has_Handwriting_Present__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Has_Handwriting_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BofA-Specific Field</description>
    <label>Has Handwriting Present</label>
    <type>Checkbox</type>
</CustomField>