force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__High_Value_on_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__High_Value_on_Date__c</fullName>
    <label>High Value on Date (DEPRECATED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>