force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Installment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Installment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installment (DEPRECATED)</label>
    <referenceTo>ucinn_ascendv2__Installment__c</referenceTo>
    <relationshipLabel>Payments (Installment)</relationshipLabel>
    <relationshipName>Payments_Installment</relationshipName>
    <type>Lookup</type>
</CustomField>