force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Is_Ascend_Community_Gift_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Ascend_Community_Gift_Formula__c</fullName>
    <formula>ucinn_ascendv2__Opportunity__r.ucinn_ascendv2__Is_Ascend_Community_Gift__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Ascend Community Gift</label>
    <type>Checkbox</type>
</CustomField>