force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Is_Designation_Mismatch_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Designation_Mismatch_Formula__c</fullName>
    <description>This formula is true if the giving history Designation does not match the Designation Detail&apos;s Designation.  CS 341</description>
    <formula>ucinn_ascendv2__Designation__c  &lt;&gt;  ucinn_ascendv2__Designation_Detail__r.ucinn_ascendv2__Designation__c</formula>
    <label>Is Designation Mismatch</label>
    <type>Checkbox</type>
</CustomField>