force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Is_Payment_Matching__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Payment_Matching__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BofA-Specific Field</description>
    <label>Is Payment Matching</label>
    <type>Checkbox</type>
</CustomField>