force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Is_Processed_By_Matching_Service__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Processed_By_Matching_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Processed By Matching Service</label>
    <type>Checkbox</type>
</CustomField>