force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Is_Tax_Receipt__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Tax_Receipt__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Tax Receipt</label>
    <type>Checkbox</type>
</CustomField>