force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Is_Voided__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Voided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Voided (DEPRECATED)</label>
    <type>Checkbox</type>
</CustomField>