force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Matching_Gift_Count__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Gift_Count__c</fullName>
    <description>Number of Matching Gifts tied to this payment.</description>
    <inlineHelpText>Number of Matching Gifts tied to this payment.</inlineHelpText>
    <label>Matching Gift Count</label>
    <summaryForeignKey>ucinn_ascendv2__Matching_Gift_Origination__c.ucinn_ascendv2__Payment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>