force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Matching_Record_Created__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Record_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matching Record Created (DEPRECATED)</label>
    <type>Checkbox</type>
</CustomField>