force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Membership_Days_Granted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Membership_Days_Granted__c</fullName>
    <label>Membership Days Granted</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>