force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Number_of_Shares__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_of_Shares__c</fullName>
    <label>Number of Shares (DEPRECATED)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>