force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Online_Payment_Charge_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Online_Payment_Charge_ID__c</fullName>
    <label>Online Payment Charge ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>