force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Opportunity_Record_Type__c</fullName>
    <formula>ucinn_ascendv2__Opportunity__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pledge / Gift Record Type</label>
    <type>Text</type>
</CustomField>