force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Opportunity_Stage__c</fullName>
    <formula>TEXT(ucinn_ascendv2__Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pledge / Gift Stage</label>
    <type>Text</type>
</CustomField>