force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Overpayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Overpayment_Amount__c</fullName>
    <description>Payment amount exceeding the amount remaining for pledge.</description>
    <inlineHelpText>Payment amount exceeding the amount remaining for pledge.</inlineHelpText>
    <label>Overpayment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>