force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Overpayment_Gift__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Overpayment_Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment amount exceeding the amount remaining for pledge.</description>
    <inlineHelpText>Payment amount exceeding the amount remaining for pledge.</inlineHelpText>
    <label>Overpayment Gift</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Payments (Overpayment Gift)</relationshipLabel>
    <relationshipName>Payments_Overpayment_Gift</relationshipName>
    <type>Lookup</type>
</CustomField>