force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Payment_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payment_Name_Auto_Number__c</fullName>
    <displayFormat>T{0000000}</displayFormat>
    <label>Payment Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>