force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Post_to_G_L_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Post_to_G_L_Date__c</fullName>
    <description>Date of when payment should be posted to the G/L.</description>
    <label>Post to G / L Date</label>
    <type>Date</type>
</CustomField>