force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Previous_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Previous_Expiration_Date__c</fullName>
    <description>Date of previous expiration date of a membership. If no previous expiration date, then this will be the anniversary date.</description>
    <label>Previous Expiration Date</label>
    <type>Date</type>
</CustomField>