force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Receipt_Number__c</fullName>
    <description>A stable, non-changing field to track Payments.</description>
    <inlineHelpText>A stable, non-changing field to track Payments.</inlineHelpText>
    <label>Receipt Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>