force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Reference__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Reference__c</fullName>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>