force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Routing_Number__c</fullName>
    <description>Number used to identify the intended financial institution when wiring money using an external payment gateway.</description>
    <inlineHelpText>Number used to identify the intended financial institution when wiring money using an external payment gateway.</inlineHelpText>
    <label>Routing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>