force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Session_Approved_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Session_Approved_Date_Formula__c</fullName>
    <formula>DATEVALUE(ucinn_ascendv2__Session__r.ucinn_ascendv2__Session_Totals_Approved__c)</formula>
    <label>Session Approved Date</label>
    <type>Date</type>
</CustomField>