force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Status__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
                <default>true</default>
                <label>Paid</label>
            </value>
            <value>
                <fullName>Partial Payment</fullName>
            </value>
            <value>
                <fullName>Early Payment</fullName>
            </value>
            <value>
                <fullName>Written off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>