force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Status_In_External_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Status_In_External_Payment_Gateway__c</fullName>
    <description>Denotes the status of a transaction in an External Payment Gateway.</description>
    <inlineHelpText>Denotes the status of a transaction in an External Payment Gateway.</inlineHelpText>
    <label>Status In External Payment Gateway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charged</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Charged - Transmitted</fullName>
            </value>
            <value>
                <fullName>Active - Needs Authorization and Charge</fullName>
            </value>
            <value>
                <fullName>Active - Needs EFT Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>