force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Subscription_ID__c</fullName>
    <description>ID that refers to a constituent&apos;s payment information on an external payment gateway.</description>
    <inlineHelpText>ID that refers to a constituent&apos;s payment information on an external payment gateway.</inlineHelpText>
    <label>Subscription ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>