force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Tender_Type_for_Gifts__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Tender_Type_for_Gifts__c</fullName>
    <label>Tender Type for Gifts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Other Non-Cash</fullName>
            </value>
            <value>
                <fullName>Art Work</fullName>
            </value>
            <value>
                <fullName>Bank of America</fullName>
            </value>
            <value>
                <fullName>Closely Held Stock</fullName>
            </value>
            <value>
                <fullName>Contingent Commitment</fullName>
            </value>
            <value>
                <fullName>Direct to University</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Discover Recurring</fullName>
            </value>
            <value>
                <fullName>Electronic Funds Transfer</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Farm Property</fullName>
            </value>
            <value>
                <fullName>Gifts in Kind</fullName>
            </value>
            <value>
                <fullName>GIK (Gift-in-Kind)</fullName>
            </value>
            <value>
                <fullName>Insurance Bequest</fullName>
            </value>
            <value>
                <fullName>Insurance Commitment</fullName>
            </value>
            <value>
                <fullName>IRA Rollover</fullName>
            </value>
            <value>
                <fullName>Marketable Securities</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>MasterCard Recurring</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payroll Deduction</fullName>
            </value>
            <value>
                <fullName>Pledge Writeoff</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Real Estate, Non-Farm</fullName>
            </value>
            <value>
                <fullName>Retirement Assets</fullName>
            </value>
            <value>
                <fullName>Stock Gift</fullName>
            </value>
            <value>
                <fullName>Testamentary Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>